# Strojenie-instrumentow-strunowych-przy-uzyciu-wtyczki-VST

dokument pracy inżynierskiej/: main.tex
dokument pracy inżynierskiej/rozdzialy/: rozdzial-1.tex  strona-tytulowa.tex
dokument pracy inżynierskiej/spisy/: spis-literatury.tex  spis-tabel.tex  spis-tresci.tex  wywolanie-spisow.tex
dokument_pracy_inzynierskiej/: konfiguracja-dokumentu.tex
dokument_pracy_inzynierskiej/rozdzialy/: oswiadczenie-o-samodzielnosci.tex  rozdzial-2.tex  rozdzial-3.tex  rozdzial-4.tex  wstep.tex  zakonczenie.tex
dokument_pracy_inzynierskiej/spisy/: spis-ilustracji.tex
repozytoria/generate-wavs/: pyproject.toml
repozytoria/generate-wavs/data/: audio_amplitude.py  audio_bit_depth.py  audio_dcoffset.py  audio_duration.py  audio_frequencies.py  audio_noise.py  audio_phase_shift.py  audio_sample_rates.py  audio_wave_forms.py  frequencies.py  sound_scenario.py
repozytoria/generate_wavs/: .pylintrc  main.py  pyproject.toml
repozytoria/generate_wavs/constants/: audio_amplitude.py  audio_bit_depth.py  audio_dcoffset.py  audio_duration.py  audio_frequencies.py  audio_noise.py  audio_phase_shift.py  audio_sample_rates.py  audio_wave_forms.py  sound_scenario.py
repozytoria/generate_wavs/data/: audio_amplitude.py  audio_bit_depth.py  audio_dcoffset.py  audio_duration.py  audio_frequencies.py  audio_noise.py  audio_phase_shift.py  audio_sample_rates.py  audio_wave_forms.py  sound_scenario.py
repozytoria/wav-generator/: Cargo.toml
repozytoria/wav-generator/src/: main.rs
