[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 4
include_trailing_comma = true
known_first_party = ["generate_wavs"]

[tool.black]
line-length = 79
target-version = ["py313"]
preview = true
skip-string-normalization = true

[tool.poetry]
name = "generate_wavs"
version = "0.1.0"
description = ""
authors = ["RomanGlegola <romanglegola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
isort = "^5.13.2"
black = "^24.10.0"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
